--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#1e40af" />
     <meta
       name="description"
-      content="Professional yt Video Downloader - High-quality downloads for content creators and educators. Fast, secure, and reliable."
+      content="yt Video Downloader - High-quality downloads for content creators and educators. Fast, secure, and reliable."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
